src/objects/Producto__c.object
<CustomObject>
    <description>Objeto para administrar los productos que los ejecutivos podrán registrar en las oportunidades.</description>
    <fields>
        <fullName>Tipo_de_oportunidad__c</fullName>
        <label>Tipo de oportunidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adquirente</fullName>
                </value>
                <value>
                    <fullName>Alianzas Comerciales</fullName>
                </value>
                <value>
                    <fullName>Aportaciones</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Banca electrónica</fullName>
                </value>
                <value>
                    <fullName>Cadenas de valor</fullName>
                </value>
                <value>
                    <fullName>CIE</fullName>
                </value>
                <value>
                    <fullName>Coberturas (Derivados)</fullName>
                </value>
                <value>
                    <fullName>Coberturas y derivados</fullName>
                </value>
                <value>
                    <fullName>Comercio internacional</fullName>
                </value>
                <value>
                    <fullName>DEM</fullName>
                </value>
                <value>
                    <fullName>DIE</fullName>
                </value>
                <value>
                    <fullName>Disposición</fullName>
                </value>
                <value>
                    <fullName>DOM</fullName>
                </value>
                <value>
                    <fullName>Domiciliación</fullName>
                </value>
                <value>
                    <fullName>Fiduciario</fullName>
                </value>
                <value>
                    <fullName>Financiamiento</fullName>
                </value>
                <value>
                    <fullName>Inversiones</fullName>
                </value>
                <value>
                    <fullName>Nómina</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>Swift</fullName>
                </value>
                <value>
                    <fullName>Swift / Transferencia internacional</fullName>
                </value>
                <value>
                    <fullName>Tarjeta mi despensa</fullName>
                </value>
                <value>
                    <fullName>Tarjetas</fullName>
                </value>
                <value>
                    <fullName>Tarjetas ( TCE, TDE, TDP, TG)</fullName>
                </value>
                <value>
                    <fullName>TIB</fullName>
                </value>
                <value>
                    <fullName>Vista</fullName>
                </value>
                <value>
                    <fullName>CIB</fullName>
                </value>
                <value>
                    <fullName>Multirecaudador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pr_fr_max__c</fullName>
        <formula>IF( INCLUDES(cp_lm_ambito__c , &quot;MAX&quot;) , true, false)</formula>
        <label>MAX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cp_lm_ambito__c</fullName>
        <description>Campo que identifica si el producto pertenece a un modulo</description>
        <label>Ámbito</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIC</fullName>
                </value>
                <value>
                    <fullName>MAX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Producto</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Producto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos</pluralLabel>
    <recordTypes>
        <fullName>BPyP_tre_Productos</fullName>
        <active>true</active>
        <label>BPyP</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>